static/css/base.css
/* ... */
.tab--selected {
    position: relative;
    font-weight: 400;
}

/* line under selected tab text */
.tab--selected::after {
    content: '';
    position: absolute;
    background-color: var(--col-accent);
    height: 1px;
    width: 1.2rem;
    left: 50%;
    top: 50%;
    transform: translate(-50%, calc(-50% + 1.2rem));
    transition: 500ms;
}

.btn--a-wrap {
    width: 100%;
}

.diamond {
    position: absolute;
    border: 1px solid #ffffff00;
    transform: rotate(45deg);
    width: 15px;
    height: 15px;
    bottom: -7px;
    background-color: var(--col-bg1);
}

.diamond-shadow {
    position: absolute;
    transform: rotate(45deg);
    width: 15px;
    height: 15px;
    bottom: -13px;
    background-color: var(--col-drop-shadow1);
    opacity: 0;
}

.tab-shadow {
    position: absolute;
    width: 95%;
    height: 6px;
    background-color: var(--col-drop-shadow1);
    bottom: -7px;
}

.tab-shadow--left {
    right: 0;
}

.tab-shadow--right {
    left: 0;
}




/*---------------------------*\
    #CARDS
\*---------------------------*/

.card-container {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.preview-card {
    border: 1px solid var(--col-accent);
    border-radius: 2px;
    margin: 3.2rem 0;
    width: 100%;
    max-width: var(--vid-max-width);
    box-shadow: 0 19px 0 -12px var(--col-drop-shadow1);
}

.preview-card.top {
    margin-top: 0;
}

.card__content {
    padding: 0 0.8rem;
}

.card__content__text {
    max-height: 13.6rem;
    overflow: scroll;
}

.card__content__text>p {
    margin-bottom: 0.8rem;
}

.card__content__text>p.card__content__text__last {
    margin-bottom: 0;
}

.card__buttons {
    display: flex;
    margin-top: 0.8rem;
    border-top: 1px solid var(--col-accent);
}

.site-demo,
.music-clip {
    width: 100%;
    max-width: var(--vid-max-width);
    border-bottom: 1px solid var(--col-accent);
    border-radius: 2px 2px 0 0;
    transition: 1500ms;
}

.card__btn--left {
    border-bottom: none;
    border-left: none;
    border-radius: 0 0 0 2px;
    border-right: 1px solid var(--col-accent);
    background-color: var(--col-cream-dark);
    animation: none;
}

.card__btn--right {
    border-bottom: none;
    border-left: none;
    border-right: none;
    border-radius: 0 0 2px 0;
    background-color: var(--col-cream-dark);
    animation: none;
}




/*---------------------------*\
    #TOOLKIT
\*---------------------------*/

.tech-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.logo {
    height: 32px;
    margin-bottom: 0.8rem;
}

.logo.logo--python {}




/*---------------------------*\
    #NOTES
\*---------------------------*/
.books-container {
    flex-wrap: wrap;
    padding: 0;
    margin: 0 -0.8rem;
}

.preview-card.book-card {
    width: 44%;
    flex-shrink: 1;
    margin: 1.2rem 0.8rem;
}

.book-cover {
    max-height: 320px;
    max-width: 100%;
    object-fit: cover;
}

.book-cover.pos--center {
    object-position: center;
}

.book-cover.pos--top {
    object-position: top;
}

.book-cover.pos--bottom {
    object-position: bottom;
}

@media screen and (min-width: 830px) {
    .preview-card.book-card {
        max-width: 250px;
    }
}




/*---------------------------*\
    #MEDIA
\*---------------------------*/

.yt-embed-container {
    position: relative;
    padding-bottom: 50%;
    border-bottom: 1px solid var(--col-accent);
}

.yt-embed {
    width: 100%;
    height: 100%;
    position: absolute;
}

.media__video,
.media__photo {
    width: 100%;
    display: block;
    border-radius: 2px;
}

.media__video {
    border-bottom: 1px solid var(--col-accent);
}


.preview-card.vid {
    width: 100%;
    /* min-width: 400px; */
}


@media only screen and (min-width: 610px) {
    .video-container {
        display: flex;
        justify-content: space-between;
    }

    .preview-card.left {
        margin-right: 1.6rem;
    }

    .preview-card.vid {
        margin-top: 0;
        margin-bottom: 0;
    }
}




/*---------------------------*\
    #FOOTER
\*---------------------------*/

footer {
    background-color: var(--col-bg2);
    border-top: 1px solid var(--col-accent);
    padding: 1.6rem 0 0.8rem 0;
}

.container--center {
    justify-content: center;
    align-items: center;
}

.icon {
    height: 1.6rem;
    margin-left: 0;
}

.icon--inline {
    margin-left: 0;
    margin-right: 0.8rem;
}

.icon--btn {
    height: 1.2rem;
    margin-left: 0.8rem;
}

.footer__line {
    margin-bottom: 0.8rem;
}

.icon-style {
    fill: var(--col-text);
}

.alt-icon-style {
    fill: var(--col-text);
}

.footer__icon-link {
    margin: 0 0.8rem;
}

.mail-link {
    text-decoration: underline;
    text-decoration-color: var(--col-text);
    text-decoration-thickness: 1px;
    text-underline-offset: 2px;
}




/*---------------------------*\
    #MODAL
\*---------------------------*/

.modal-overlay {
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background-color: rgba(0, 0, 0, 0.7);
    display: flex;
    justify-content: center;
    align-items: center;
    opacity: 0;
    transition: opacity 500ms ease;
}

.modal {
    background-color: rgba(255, 252, 247, 0.93);
    border: 1px solid var(--col-accent);
    border-radius: 2px;
    width: 90vw;
    max-width: 350px;
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 2.4rem;
}

.modal__text {
    color: var(--col-navy-dark);
}

.modal__title {
    margin-bottom: 1.6rem;
}

.icon--modal {
    fill: var(--col-navy-dark);
}

.modal__close {
    color: var(--col-navy-dark);
    height: 2.4rem;
    position: absolute;
    margin: 0;
    top: 0.8rem;
    right: 0.8rem;
    cursor: pointer;
}

.modal__close:hover {
    transform: rotate(90deg);
    transition: 200ms;
}
/* ... */

